--- a/gb/21/6/25/n13048310.md
+++ b/gb/21/6/25/n13048310.md
@@ -1,20 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/odslox3020/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/odslox3020/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/odslox3020/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/odslox3020/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/odslox3020/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/odslox3020/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/odslox3020/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】央视美化六四 北京党庆焰火遇冰雹</h2>
-<a href="https://git.io/JcfRn"><img width="600" src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/odslox3020/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>央视美化六四，党庆焰火遇冰雹；美盼中共不在，彭斯斥中共威胁最大；百姓受害深，谁祸乱祖国？公元前石碑载明，法老被臣民勒死。（新闻看点提供）
-</h6>
+<a href="https://d2sn4gemyo21al.cloudfront.net/A9nq81jGt"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年06月26日讯】大家好，欢迎大家关注<ahref="https://github.com/odslox3020/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，我是李沐阳。今天是美东时间6月26日星期六，亚洲时间是6月27日星期日。</p>
-<p>央视美化<ahref="https://github.com/odslox3020/djy/blob/master/gb/tag/%E5%85%AD%E5%9B%9B.md#1">六四</a>，<ahref="https://github.com/odslox3020/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>焰火遇冰雹；美盼中共不在，彭斯斥中共威胁最大；百姓受害深，谁祸乱祖国？公元前石碑载明，法老被臣民勒死；肖文判罪，弗洛伊德像被损；UFO解密，最吸睛18起。</p>
+	<p>【大纪元2021年06月26日讯】大家好，欢迎大家关注<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>，我是李沐阳。今天是美东时间6月26日星期六，亚洲时间是6月27日星期日。</p>
+<p>央视美化<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AD%E5%9B%9B.md#1">六四</a>，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>焰火遇冰雹；美盼中共不在，彭斯斥中共威胁最大；百姓受害深，谁祸乱祖国？公元前石碑载明，法老被臣民勒死；肖文判罪，弗洛伊德像被损；UFO解密，最吸睛18起。</p>
 <p>黑龙江当地媒体援引水文水资源中心的消息，大兴安岭地区的呼玛县三卡乡三道卡站27日将出现洪峰，预计超警戒水位4.8米，超保证水位1.65米。洪水量级惊人，超过75年一遇。</p>
 <p>浙江大学经济学教授赵伟24日披露，自己接了日本著名经济学家藤田昌久教授一个普通电话，随后杭州警方对他进行了电话轰炸。还上门要求填表、签字以“备案”。</p>
 <p>哥伦比亚总统杜克25日乘坐直升机，准备前往北桑坦德省首府库库塔市，飞经卡塔通博地区上空时遭到袭击，直升机被击中数枪。</p>
 <p>两位西方国家的外交官员26日告诉美联社，乌克兰签署联合声明支持调查新疆人权状况，中共扬言扣住运往乌克兰的50万剂科兴疫苗，迫使乌克兰退出声明。</p>
 <p>阿富汗总统甘尼25日率代表团前往美国与拜登会晤，目前传出一名随行摄影师确诊，这名摄影师出席了甘尼与佩洛西的会面。消息人士透露，阿富汗代表团全员都接种过疫苗，但没有说是哪款疫苗。</p>
 <p>截止到美东时间6月26日下午12点，全球新增确诊中共病毒人数424,250人，总确诊人数达到了1亿8,175万5,561人，死亡总数是392万4,972人。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://git.io/JcfRn"><img width="600" src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/odslox3020/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/aUJ8ijbLg5w" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。我们今天会谈到几个内容首先会谈到总加速师的新动作，又重复中共对<ahref="https://github.com/odslox3020/djy/blob/master/gb/tag/%E5%85%AD%E5%9B%9B.md#1">六四</a>的定性，把自己和那些罪大恶极的中共领导人主动绑在了一起。这会涉及到一个问题，如果中共倒台、被算总账的时候，中共领导人会被如何处置？</p>
+<p><center><a src=""></a><a href="https://d2sn4gemyo21al.cloudfront.net/A9nq81jGt"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/22b9b73c-7e24-47a3-a8e2-b7b136009cd9?r=16x9&amp;d=1967" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>下面进入今天的话题。我们今天会谈到几个内容首先会谈到总加速师的新动作，又重复中共对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AD%E5%9B%9B.md#1">六四</a>的定性，把自己和那些罪大恶极的中共领导人主动绑在了一起。这会涉及到一个问题，如果中共倒台、被算总账的时候，中共领导人会被如何处置？</p>
 <p>埃及发现了一块2600年前的石碑，记载着埃及法老被自己臣民勒死。这是否对北京当局有警示意义？</p>
 <p>美国UFO报告终于解密了，其中介绍了18起最吸引人的部分。</p>
 <h2>央视美化六四 总加速师再加速</h2>
@@ -26,7 +25,7 @@
 <p>其实流氓挨打的时候非常多，只不过流氓不认为那是挨打。就像人认为猪圈肮脏，而猪自己认为是在享受天堂生活一样。而且，等待流氓的下场，很多是我们肉眼看得见的。</p>
 <p>实际上，我觉得北京当局真的蠢到家了。因为他对江泽民等人的美化吹嘘，就是主动把自己跟他们这些罪大恶极的中共领导人绑在了一起。所以我估计将来中共死翘翘那天，北京现任当局的下场也不会好。</p>
 <p>我相信咱们都能看得见这一天。因为现在就是天灭中共的时候，中共折腾不了几天。</p>
-<h2><ahref="https://github.com/odslox3020/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>烟火遇冰雹 美盼中共不存在</h2>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>烟火遇冰雹 美盼中共不存在</h2>
 <p>昨天（25日）晚上，中共原计划在鸟巢——国家体育馆举办大型焰火。谁想到突然下起了暴雨，还夹带着冰雹。最终等到晚上10点，憋了很久的焰火才放出来。</p>
 <p>从网络影片看，北京的冰雹下得很密，砸到地上四处乱溅。</p>
 <p>有网友向我传来一段影片，其中显示地下积了厚厚的一层冰雹。</p>
@@ -104,7 +103,7 @@
 <p>这一切的外面是铁丝网，暗示着所有这些都被中共掩盖着。</p>
 <p>网友在文字中表示，深藏在内心黑幕后面的，是见不得光的撒旦代言人，无时无刻不在严厉检视着追随信奉者的一举一动，并一步一步地威胁摧毁着残存的固有道德文化。</p>
 <p>网友表示，即使如此伤痕累累，但这颗濒临裂解的中国良知，还没有完全破碎到不可挽救。热血流淌仍然延续灌溉着，等待在铁幕外的幼苗继续发言茁壮</p>
-<figure id="attachment_13049898" aria-describedby="caption-attachment-13049898" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13049898-unnamed.jpg"><img class="size-medium wp-image-13049898" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049898-unnamed-450x637.jpg" alt="" width="450" b="637" /></a><figcaption id="caption-attachment-13049898" class="wp-caption-text">“黑幕外的春天”（<ahref="https://github.com/odslox3020/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>观众提供）</figcaption></figure>
+<figure id="attachment_13049898" aria-describedby="caption-attachment-13049898" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/06/id13049898-unnamed.jpg"><img class="size-medium wp-image-13049898" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049898-unnamed-450x637.jpg" alt="" width="450" b="637" /></a><figcaption id="caption-attachment-13049898" class="wp-caption-text">“黑幕外的春天”<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>观众提供）</figcaption></figure>
 <p>这幅画面的确把中国的现状给巧妙地揭示了出来。中共就是这样搞层层威逼利诱，然后形成层层监控。</p>
 <p>但实际中共是见不得光的，如果我们把它的黑幕一层层的撕开，邪恶就会维持不下去，就会消失遁形。这也是我们不断鼓励大家都能够勇敢的发声，从不同层面、不同角度揭露中共的原因。</p>
 <p>第二幅画作叫“坚持信念”，是一位马来西亚只有17岁的年轻朋友创作的。这位朋友在文字中介绍的比较详细。</p>
@@ -124,15 +123,19 @@
 <p>我们希望您用简短优美的文字，向台湾遭受疫情的民众送上祝福，为一线抗疫的人员加油打气。字数要求在100字以内，题材不限。</p>
 <p>您的作品请寄送到我们的另外一个邮箱：newsinsight00@gmail.com，newsinsight是新闻看点的英文名。</p>
 <p>我们会把所有的作品都上传到优乐客网站，然后根据大家的点赞数量，选前10篇作品，在节目中读给大家听。希望大家踊跃参加我们这两个活动。</p>
+<p><strong>?? 免费订阅优乐客电子报，每日收到最新消息</strong>：<ahref="https://www.youlucky.biz/follow-us">https://www.youlucky.biz/follow-us</a></p>
 <p>******************</p>
-<p>印象中是1990年代，在我们老家附近的一个市场旁，遇到一个摆地摊的。地面上就一张纸，上面写着“不用我，知道你姓什么”。比较好奇，我就在旁边看了一会。果然连续几个人都被他说出了姓氏，我也是其中之一。</p>
+<h2>今日会员：</h2>
+<p><figure id="attachment_13053893" aria-describedby="caption-attachment-13053893" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="http://muyangshow.com"><img src="https://i.epochtimes.com/assets/uploads/2021/06/id13053893-Screen-Shot-2021-06-28-at-1.43.55-PM-600x337.png" alt="【历史看点】成大事的秘诀 慧能大师的心境【2021.06.26】" width="600" b="337" class="size-large wp-image-13053893" /></a><figcaption id="caption-attachment-13053893" class="wp-caption-text">【历史看点】成大事的秘诀 慧能大师的心境【2021.06.26】</figcaption></figure><br />
+印象中是1990年代，在我们老家附近的一个市场旁，遇到一个摆地摊的。地面上就一张纸，上面写着“不用我，知道你姓什么”。比较好奇，我就在旁边看了一会。果然连续几个人都被他说出了姓氏，我也是其中之一。</p>
 <p>当时觉得这个人挺有本事，等后来看的东西多了，接触的东西多了，发现比他本事大得多的人大有人在。</p>
 <p>在今天的历史看点，跟大家分享“两花透两命”的故事。欢迎大家到优乐客会员区了解更多。我们的会员网站的网址是http://muyangshow.com，还有一个http://youlucky.biz。</p>
 <p>以上就是我们今天的节目内容。如果您喜欢新闻看点，请别忘记点赞、订阅，同时帮我们把这个频道转发出去，让更多有缘人看到我们，听到我们的声音。感谢您的帮助与收看，再会。</p>
-<p>加入会员观察独家：<ahref="https://ept.ms/3wsLpkk">https://ept.ms/3wsLpkk</a><br />
-沐阳会员网站： <ahref="http://muyangshow.com">http://muyangshow.com</a><br />
+<p>&#8211;<br />
+沐阳会员网站：<ahref="http://muyangshow.com">http://muyangshow.com</a><br />
+大陆免翻墙网址： <ahref="https://ogate.org/@youlucky">https://ogate.org/@youlucky</a><br />
 支持沐阳：<ahref="https://www.youlucky.biz/mu-yang-about">https://www.youlucky.biz/mu-yang-about</a><br />
-欢迎订阅＋按小铃铛：<ahref="http://bit.ly/SubscribeNewsInsight">bit.ly/SubscribeNewsInsight</a></p>
+欢迎订阅＋按小铃铛：<ahref="https://bit.ly/SubscribeNewsInsight">https://bit.ly/SubscribeNewsInsight</a></p>
 <p>《新闻看点》制作组</p>
 <p>责任编辑：李昊 ＃</p>
 	
@@ -140,41 +143,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/22/n13040286.md#1">【新闻看点】胡锡进要退了 共和党促拜登查毒源</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13045778.md#1">【新闻看点】武汉多种病毒早传播？NIH为何删资料</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13048327.md#1">【新闻看点】港府人事大变 武汉军运会被曝怪异</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/22/n13040286.md#1">【新闻看点】胡锡进要退了 共和党促拜登查毒源</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/24/n13045778.md#1">【新闻看点】武汉多种病毒早传播？NIH为何删资料</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13048327.md#1">【新闻看点】港府人事大变 武汉军运会被曝怪异</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307016.md#1" target="_blank">心升：以史为镜看毛邪（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/10/n9943237.md#1" target="_blank">林辉：上了中共当的“一二九”学生运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 面临成败生死如何看天意？</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/16/n13026383.md#1">出入冥界神界看到过去未来事  他们捎给人什么讯息？</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/26/n13048557.md#1">【方菲访谈】专访李有甫：从三星堆看史前文化</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13045083.md#1">【未解之谜】西藏的神秘现象（1） 转世灵童</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13048344.md#1">【秦鹏直播】抵制无效！Nike财报远超预期</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/26/n13049310.md#1">【财商天下】逆天生物实验 中共奔向终极目的？</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13044183.md#1">【珍言真语】陈朗昇：国安法下港媒生存困境</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13048225.md#1">华春莹“反习”后 赵立坚“反党”言论引议</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13046482.md#1">【特稿】一场中共不想让您看的演出</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13046359.md#1">避免体重增加 先避免两种常见的饮食习惯</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13045511.md#1">杜汶泽聘用《苹果》失业员工 港人直呼感动</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13046498.md#1">SEVENTEEN迷你八辑 创2021年最高首周销量纪录</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13048292.md#1">关晓彤路透照被指像大爷遛弯 小演员帮澄清</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13043954.md#1">《变形金刚：万兽崛起》柯博文、大黄蜂回归</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13043350.md#1">《一婊人才》影评：趣味手段 反将爱情骗子一军</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/23/n13042201.md#1">打疫苗后现死亡案例？医师：2种情况暂缓施打</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/23/n13042990.md#1">2种食物是“天然补血剂” 这样吃效果最好</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/24/n13044254.md#1">日本小学生意外跟野熊道早安 熊被吓跑了</a></li>
-<li><a href="https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/odslox3020/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/odslox3020/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/25/n13048310.htm">【新闻看点】央视美化六四 北京党庆焰火遇冰雹</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/25/n13048310.htm">【新闻看点】央视美化六四 北京党庆焰火遇冰雹</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odslox3020/djy/blob/master/gb/21/6/25/n13048310.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/odslox3020/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/odslox3020/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/odslox3020/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/odslox3020/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/odslox3020/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13048310.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
